--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 colored = "2.1"
+
+[dev-dependencies]
+cargo-husky = "1"
+
+[package.metadata.husky]
+pre-commit = "cargo fmt -- --check"
