--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 colored = "2.1"
 
-[dev-dependencies]
-cargo-husky = "1"
 
-[package.metadata.husky]
-pre-commit = "cargo fmt -- --check"
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
